--- a/lab2.tex
+++ b/lab2.tex
@@ -16,11 +16,11 @@
 \begin{tabular}{| p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} |}
 \hline
  $N_{0}=N_{1}$  & Basic & Pthread -  Diagonal & Pthreads - Blocked&OpenMP - Naive& OpenMP - Diagonal & OpenMP - Blocked\\ \hline
- 128 &  &  &&&&\\  
- 1024 &  &  &&&&\\
- 2048&  &  &&&&\\
- 4096 &  &  &&&&\\
- 16384 &  &  &&&&\\
+ 128 & $5.5828\times10^{-5}$ & $0.0057640$ &&$0.0054073$&$0.0017463$&$0.0026457$\\  
+ 1024 & $0.0037808$ & $0.051978$ &&$0.0028294$&$0.0040702$&$0.060210$\\
+ 2048& $0.021078$ & $0.18114$ &&$0.0090414$&$0.0098804$&$0.21979$\\
+ 4096 & $0.088854$ & $0.63340$ &&$0.033679$&$0.039016$&$0.92435$\\
+ 16384 & $1.7036$ & $9.5218$ &&$1.1346$&$0.96734$&$15.318$\\
  \hline    
 \end{tabular}
 \end{center}
